Bug 1512491 - Part 1: Hoist bound checks with constants. r=nbp,jandem

Differential Revision: https://phabricator.services.mozilla.com/D24351