js/src/jit/RangeAnalysis.cpp
@@ -2225,9 +2225,9 @@ static inline bool SymbolicBoundIsValid(MBasicBlock* header, MBoundsCheck* ins,
 
 bool RangeAnalysis::tryHoistBoundsCheck(MBasicBlock* header,
                                         MBoundsCheck* ins) {
-  // The bounds check's length must be loop invariant.
+  // The bounds check's length must be loop invariant or a constant.
   MDefinition* length = DefinitionOrBetaInputDefinition(ins->length());
-  if (length->block()->isMarked()) {
+  if (length->block()->isMarked() && !length->isConstant()) {
     return false;
   }
 
@@ -2299,6 +2299,13 @@ bool RangeAnalysis::tryHoistBoundsCheck(MBasicBlock* header,
 
   // Hoist the loop invariant upper bounds checks.
   if (upperTerm != length || upperConstant >= 0) {
+    // Hoist the bound check's length if it isn't already loop invariant.
+    if (length->block()->isMarked()) {
+      MOZ_ASSERT(length->isConstant());
+      MInstruction* lengthIns = length->toInstruction();
+      lengthIns->block()->moveBefore(preLoop->lastIns(), lengthIns);
+    }
+
     MBoundsCheck* upperCheck = MBoundsCheck::New(alloc(), upperTerm, length);
     upperCheck->setMinimum(upperConstant);
     upperCheck->setMaximum(upperConstant);
